src/raylib-cr/lib_raylib.cr


  fun get_mouse_y = GetMouseY : Int32

  fun get_mouse_position = GetMousePosition : Vector2

  fun set_mouse_position = SetMousePosition(position : Vector2)

  fun set_mouse_scale = SetMouseScale(scale : Float32)

  fun get_mouse_wheel_move = GetMouseWheelMove : Int32

  fun get_touch_x = GetTouchX : Int32

  fun get_touch_y = GetTouchY : Int32

  fun get_touch_position = GetTouchPosition(index : Int32) : Vector2

  fun set_gestures_enabled = SetGesturesEnabled(gestureFlags : UInt32)

  fun gesture_detected? = IsGestureDetected(gesture : Int32) : Bool

  fun get_gesture_detected = GetGestureDetected : Int32

  fun get_touch_points_count = GetTouchPointsCount : Int32

  fun get_gesture_hold_duration = GetGestureHoldDuration : Float32

  fun get_gesture_drag_vector = GetGestureDragVector : Vector2

  fun get_gesture_drag_angle = GetGestureDragAngle : Float32

  fun get_gesture_pinch_angle = GetGesturePinchVector : Vector2

  fun get_gesture_pinch_angle = GetGesturePinchAngle : Float32

  fun set_camera_mode = SetCameraMode(camera : Camera3D, mode : Int32)

  fun update_camera = UpdateCamera(camera : Camera3D*)

  fun set_camera_pan_control = SetCameraPanControl(panKey : Int32)

  fun set_camera_alt_control = SetCameraAltControl(altKey : Int32)

  fun set_camera_alt_control = SetCameraSmoothZoomControl(szKey : Int32)

  fun set_camera_move_controls = SetCameraMoveControls(
    frontKey : Int32,
    backKey : Int32,
    rightKey : Int32,
    leftKey : Int32,
    upKey : Int32,
    downKey : Int32
  )

  fun draw_pixel = DrawPixel(posX : Int32, posY : Int32, color : Color)

  fun draw_pixel_v = DrawPixelV(position : Vector2, color : Color)

  fun draw_line = DrawLine(
    startPosX : Int32,
    startPosY : Int32,
    endPosX : Int32,
    endPosY : Int32,
    color : Color
  )

  fun draw_line_v = DrawLineV(startPos : Vector2, endPos : Vector2, color : Color)

  fun draw_line_ex = DrawLineEx(startPos : Vector2, endPos : Vector2, thick : Float32, color : Color)

  fun draw_line_bezier = DrawLineBezier(startPos : Vector2, endPos : Vector2, thick : Float32, color : Color)

  fun draw_circle = DrawCircle(
    centerX : Int32,
    centerY : Int32,
    radius : Float32,
    color : Color
  )

  fun draw_circle_gradient = DrawCircleGradient(
    centerX : Int32,
    centerY : Int32,
    radius : Float32,
    color1 : Color,
    color2 : Color
  )

  fun draw_circle_v = DrawCircleV(center : Vector2, radius : Float32, color : Color)

  fun draw_circle_lines = DrawCircleLines(
    centerX : Int32,
    centerY : Int32,
    radius : Float32,
    color : Color
  )

  fun draw_rectangle = DrawRectangle(
    posX : Int32,
    posY : Int32,
    width : Int32,
    height : Int32,
    color : Color
  )

  fun draw_rectangle_v = DrawRectangleV(position : Vector2, size : Vector2, color : Color)

  fun draw_rectangle_rec = DrawRectangleRec(rec : Rectangle, color : Color)

  fun draw_rectangle_pro = DrawRectanglePro(rec : Rectangle, origin : Vector2, rotation : Float32, color : Color)

  fun draw_rectangle_gradient_v = DrawRectangleGradientV(
    posX : Int32,
    posY : Int32,
    width : Int32,
    height : Int32,
    color1 : Color,
    color2 : Color
  )

  fun draw_rectangle_gradient_h = DrawRectangleGradientH(
    posX : Int32,
    posY : Int32,
    width : Int32,
    height : Int32,
    color1 : Color,
    color2 : Color
  )

  fun draw_rectangle_gradient_h = DrawRectangleGradientEx(
    rec : Rectangle,
    col1 : Color,
    col2 : Color,
    col3 : Color,
    col4 : Color
  )

  fun draw_rectangle_lines = DrawRectangleLines(
    posX : Int32,
    posY : Int32,
    width : Int32,
    height : Int32,
    color : Color
  )

  fun draw_rectangle_lines_ex = DrawRectangleLinesEx(rec : Rectangle, lineThick : Int32, color : Color)

  fun draw_triangle = DrawTriangle(v1 : Vector2, v2 : Vector2, v3 : Vector2, color : Color)

  fun draw_triangle_lines = DrawTriangleLines(v1 : Vector2, v2 : Vector2, v3 : Vector2, color : Color)

  fun draw_poly = DrawPoly(
    center : Vector2,
    sides : Int32,
    radius : Float32,
    rotation : Float32,
    color : Color
  )

  fun draw_poly_ex = DrawPolyEx(points : Vector2*, numPoints : Int32, color : Color)

  fun draw_poly_ex_lines = DrawPolyExLines(points : Vector2*, numPoints : Int32, color : Color)

  fun check_collision_recs = CheckCollisionRecs(rec1 : Rectangle, rec2 : Rectangle) : Bool

  fun check_collision_circles = CheckCollisionCircles(
    center1 : Vector2,
    radius1 : Float32,
    center2 : Vector2,
    radius2 : Float32
  ) : Bool

  fun check_collision_circle_rec = CheckCollisionCircleRec(center : Vector2, radius : Float32, rec : Rectangle) : Bool

  fun get_collision_rec = GetCollisionRec(rec1 : Rectangle, rec2 : Rectangle) : Rectangle

  fun check_collision_point_rec = CheckCollisionPointRec(point : Vector2, rec : Rectangle) : Bool

  fun check_collision_point_circle = CheckCollisionPointCircle(point : Vector2, center : Vector2, radius : Float32) : Bool

  fun check_collision_point_triangle = CheckCollisionPointTriangle(
    point : Vector2,
    p1 : Vector2,
    p2 : Vector2,
    p3 : Vector2
  ) : Bool

  fun load_image = LoadImage(fileName : UInt8*) : Image

  fun load_image_ex = LoadImageEx(
    pixels : Color*,
    width : Int32,
    height : Int32
  ) : Image

  fun load_image_pro = LoadImagePro(
    data : Void*,
    width : Int32,
    height : Int32,
    format : Int32
  ) : Image

  fun load_image_raw = LoadImageRaw(
    fileName : UInt8*,
    width : Int32,
    height : Int32,
    format : Int32,
    headerSize : Int32
  ) : Image

  fun export_image = ExportImage(fileName : UInt8*, image : Image)

  fun load_texture = LoadTexture(fileName : UInt8*) : Texture2D

  fun load_texture_from_image = LoadTextureFromImage(image : Image) : Texture2D

  fun load_render_texture = LoadRenderTexture(
    width : Int32,
    height : Int32
  ) : RenderTexture2D

  fun unload_image = UnloadImage(image : Image)

  fun unload_texture = UnloadTexture(texture : Texture2D)

  fun unload_render_texture = UnloadRenderTexture(target : RenderTexture2D)

  fun get_image_data = GetImageData(image : Image) : Color*

  fun get_image_data_normalized = GetImageDataNormalized(image : Image) : Vector4*

  fun get_pixel_data_size = GetPixelDataSize(
    width : Int32,
    height : Int32,
    format : Int32
  ) : Int32

  fun get_texture_data = GetTextureData(texture : Texture2D) : Image

  fun update_texture = UpdateTexture(texture : Texture2D, pixels : Void*)

  fun image_copy = ImageCopy(image : Image) : Image

  fun imgae_to_pot = ImageToPOT(image : Image**, fillColor : Color)

  fun image_format = ImageFormat(image : Image**, newFormat : Int32)

  fun image_alpha_mask = ImageAlphaMask(image : Image**, alphaMask : Image)

  fun image_alpha_clear = ImageAlphaClear(image : Image**, color : Color, threshold : Float32)

  fun imgae_alpha_crop = ImageAlphaCrop(image : Image**, threshold : Float32)

  fun image_alpha_premultiply = ImageAlphaPremultiply(image : Image**)

  fun image_crop = ImageCrop(image : Image**, crop : Rectangle)

  fun image_resize = ImageResize(
    image : Image**,
    newWidth : Int32,
    newHeight : Int32
  )

  fun image_resize_nn = ImageResizeNN(
    image : Image**,
    newWidth : Int32,
    newHeight : Int32
  )

  fun image_resize_canvas = ImageResizeCanvas(
    image : Image**,
    newWidth : Int32,
    newHeight : Int32,
    offsetX : Int32,
    offsetY : Int32,
    color : Color
  )

  fun image_mipmaps = ImageMipmaps(image : Image**)

  fun image_dither = ImageDither(
    image : Image**,
    rBpp : Int32,
    gBpp : Int32,
    bBpp : Int32,
    aBpp : Int32
  )

  fun imgae_text = ImageText(
    text : UInt8*,
    fontSize : Int32,
    color : Color
  ) : Image

  fun imgae_text_ex = ImageTextEx(
    font : Font,
    text : UInt8*,
    fontSize : Float32,
    spacing : Float32,
    tint : Color
  ) : Image

  fun image_draw = ImageDraw(dst : Image**, src : Image, srcRec : Rectangle, dstRec : Rectangle)

  fun image_draw_rectangle = ImageDrawRectangle(dst : Image**, position : Vector2, rec : Rectangle, color : Color)

  fun image_draw_text = ImageDrawText(
    dst : Image**,
    position : Vector2,
    text : UInt8*,
    fontSize : Int32,
    color : Color
  )

  fun image_draw_text_ex = ImageDrawTextEx(
    dst : Image**,
    position : Vector2,
    font : Font,
    text : UInt8*,
    fontSize : Float32,
    spacing : Float32,
    color : Color
  )

  fun image_flip_vertical = ImageFlipVertical(image : Image**)

  fun image_flip_horizontal = ImageFlipHorizontal(image : Image**)

  fun image_rotate_cw = ImageRotateCW(image : Image*)

  fun image_rotate_ccw = ImageRotateCCW(image : Image*)

  fun imgae_color_tint = ImageColorTint(image : Image*, color : Color)

  fun imgae_color_invert = ImageColorInvert(image : Image*)

  fun imgae_color_grayscale = ImageColorGrayscale(image : Image*)

  fun imgae_color_contrast = ImageColorContrast(image : Image*, contrast : Float32)

  fun imgae_color_brightness = ImageColorBrightness(image : Image*, brightness : Int32)

  fun imgae_color_replace = ImageColorReplace(image : Image*, color : Color, replace : Color)

  fun gen_image_color = GenImageColor(
    width : Int32,
    height : Int32,
    color : Color
  ) : Image

  fun gen_image_gradient_v = GenImageGradientV(
    width : Int32,
    height : Int32,
    top : Color,
    bottom : Color
  ) : Image

  fun gen_image_gradient_h = GenImageGradientH(
    width : Int32,
    height : Int32,
    left : Color,
    right : Color
  ) : Image

  fun gen_image_gradient_radial = GenImageGradientRadial(
    width : Int32,
    height : Int32,
    density : Float32,
    inner : Color,
    outer : Color
  ) : Image

  fun gen_image_checked = GenImageChecked(
    width : Int32,
    height : Int32,
    checksX : Int32,
    checksY : Int32,
    col1 : Color,
    col2 : Color
  ) : Image

  fun gen_image_white_noise = GenImageWhiteNoise(
    width : Int32,
    height : Int32,
    factor : Float32
  ) : Image

  fun gen_image_perlin_noise = GenImagePerlinNoise(
    width : Int32,
    height : Int32,
    offsetX : Int32,
    offsetY : Int32,
    scale : Float32
  ) : Image

  fun gen_image_cellular = GenImageCellular(
    width : Int32,
    height : Int32,
    tileSize : Int32
  ) : Image

  fun gen_texture_mipmaps = GenTextureMipmaps(texture : Texture2D*)

  fun set_texture_filter = SetTextureFilter(texture : Texture2D, filterMode : Int32)

  fun set_texture_wrap = SetTextureWrap(texture : Texture2D, wrapMode : Int32)

  fun draw_texture = DrawTexture(
    texture : Texture2D,
    posX : Int32,
    posY : Int32,
    tint : Color
  )

  fun draw_texture_v = DrawTextureV(texture : Texture2D, position : Vector2, tint : Color)

  fun draw_texture_ex = DrawTextureEx(
    texture : Texture2D,
    position : Vector2,
    rotation : Float32,
    scale : Float32,
    tint : Color
  )

  fun draw_texture_rec = DrawTextureRec(texture : Texture2D, sourceRec : Rectangle, position : Vector2, tint : Color)

  fun draw_texture_pro = DrawTexturePro(
    texture : Texture2D,
    sourceRec : Rectangle,
    destRec : Rectangle,
    origin : Vector2,
    rotation : Float32,
    tint : Color
  )

  fun get_font_default = GetFontDefault : Font

  fun load_font = LoadFont(fileName : UInt8*) : Font

  fun load_font_ex = LoadFontEx(
    fileName : UInt8*,
    fontSize : Int32,
    charsCount : Int32,
    fontChars : Int32*
  ) : Font

  fun load_font_data = LoadFontData(
    fileName : UInt8*,
    fontSize : Int32,
    fontChars : Int32*,
    charsCount : Int32,
    sdf : Bool
  ) : CharInfo*

  fun gen_font_atlas = GenImageFontAtlas(
    chars : CharInfo*,
    fontSize : Int32,
    charsCount : Int32,
    padding : Int32,
    packMethod : Int32
  ) : Image

  fun unload_font = UnloadFont(font : Font)

  fun draw_fps = DrawFPS(posX : Int32, posY : Int32)

  fun draw_text = DrawText(
    text : UInt8*,
    posX : Int32,
    posY : Int32,
    fontSize : Int32,
    color : Color
  )
